<resources>
    <string name="app_name">iMovies!</string>
    <string name="title">Title</string>
    <string name="desc">lorem ipsum dolor sit amet</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="btn_start">START</string>
    <string name="btn_about">About</string>
    <string name="author">FAISHAL MUHAMMAD ABDULLAH</string>
    <string name="email">faishalmabdullah@gmail.com</string>
    <string name="beta">App Version: Beta</string>
    <string name="photo">Photo</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
