<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        app:srcCompat="@color/colorPrimaryDark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_gravity="bottom">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="199dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/cropped" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:text="@string/author"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/beta" />

    </RelativeLayout>

</RelativeLayout>