<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.faishalma.imovies.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                android:src="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_toEndOf="@id/img_photo"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingTop="25dp"
                    android:text="@string/release_date"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="29dp"
                        android:layout_height="26dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/calendar"
                        tools:srcCompat="@drawable/calendar" />

                    <TextView
                        android:id="@+id/txt_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="serif"
                        android:text="@string/release_date"
                        android:textColor="#F44336"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingTop="25dp"
                    android:text="@string/rating"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="29dp"
                        android:layout_height="26dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/star"
                        tools:srcCompat="@drawable/star" />

                    <TextView
                        android:id="@+id/txt_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@id/imageView2"
                        android:fontFamily="serif"
                        android:text="@string/rating"
                        android:textColor="#F44336"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="6dp"
                android:paddingRight="6dp">

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center|clip_vertical|center_horizontal|center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="serif"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_director1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_director2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="false"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@id/txt_director1"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="6dp"
                    android:background="@color/colorPrimary"
                    android:padding="15dp"
                    android:text="@string/overview"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="20dp"
                    android:text="@string/desc"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>